--- a/.github/workflows/portfolio.yml
+++ b/.github/workflows/portfolio.yml
@@ -16,6 +16,7 @@ jobs:
         java: [11]
 
     runs-on: ${{ matrix.os }}
+    timeout-minutes: 30
 
     steps:
       - uses: actions/checkout@v2
