--- a/feedback/Dockerfile
+++ b/feedback/Dockerfile
@@ -1,4 +1,9 @@
+FROM maven:3.6.0-jdk-11-slim AS build
+COPY src /home/app/src
+COPY pom.xml /home/app
+RUN mvn -f /home/app/pom.xml clean package
+
 FROM adoptopenjdk/openjdk11-openj9:jdk-11.0.1.13-alpine-slim
-COPY target/feedback-*.jar feedback.jar
+COPY --from=build /home/app/target/feedback.jar feedback.jar
 EXPOSE 18080
 CMD java -Dcom.sun.management.jmxremote -noverify ${JAVA_OPTS} -jar feedback.jar
