--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,26 +2,27 @@ version: '3.1'
 
 services:
   postgres:
-    image: postgres:latest
+    image: postgres:13
+    container_name: postgres
     volumes:
       - vlingo_symbio_jdbc_postgres
     restart: always
     ports:
-      - '5432:5432'
+      - 5432:5432
     environment:
       POSTGRES_DB: vlingo_test
       POSTGRES_USER: vlingo_test
       POSTGRES_PASSWORD: vlingo123
   rabbitmq:
-      image: rabbitmq:3-management-alpine
-      container_name: rabbitmq
-      volumes:
-          - ./.docker/rabbitmq/etc/:/etc/rabbitmq/
-          - ./.docker/rabbitmq/data/:/var/lib/rabbitmq/
-          - ./.docker/rabbitmq/logs/:/var/log/rabbitmq/
-      ports:
-          - 5672:5672
-          - 15672:15672
+    image: rabbitmq:3-management-alpine
+    container_name: rabbitmq
+    volumes:
+      - ./.docker/rabbitmq/etc/:/etc/rabbitmq/
+      - ./.docker/rabbitmq/data/:/var/lib/rabbitmq/
+      - ./.docker/rabbitmq/logs/:/var/log/rabbitmq/
+    ports:
+      - 5672:5672
+      - 15672:15672
   stock-quote-publisher:
     build: ./stock-quote/
     restart: on-failure
@@ -30,6 +31,16 @@ services:
       RABBITMQ_EXCHANGE: "stocks"
       RABBITMQ_EXCHANGE_TYPE: "fanout"
       SET_RANDOM_PUBLISH_INTERVAL: "true"
+  feedback:
+    build: ./feedback/
+    restart: on-failure
+    depends_on:
+      - postgres
+      - rabbitmq
+    environment:
+      RABBITMQ_SERVICE: "rabbitmq"
+    ports:
+      - 18080:18080
 
 volumes:
   vlingo_symbio_jdbc_postgres:
