--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       POSTGRES_PASSWORD: vlingo123
   rabbitmq:
     image: rabbitmq:3-management-alpine
+    hostname: stocktrader
     container_name: rabbitmq
     volumes:
       - ./.docker/rabbitmq/etc/:/etc/rabbitmq/
