--- a/commentTone/pom.xml
+++ b/commentTone/pom.xml
@@ -36,6 +36,7 @@
         <junit.version>5.6.0</junit.version>
         <mockito.version>3.5.15</mockito.version>
         <restassured.version>4.3.1</restassured.version>
+        <sl4j.version>1.7.30</sl4j.version>
     </properties>
 
     <dependencies>
@@ -49,6 +50,12 @@
             <artifactId>gson</artifactId>
             <version>${gson.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${sl4j.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
