--- a/.github/workflows/feedback.yml
+++ b/.github/workflows/feedback.yml
@@ -30,7 +30,7 @@ jobs:
         working-directory: feedback
         run: mvn license:check
       - name: Build environment
-        run: docker-compose up -d
+        run: docker-compose -f docker-compose.yml -f docker-compose.stocktrader.yml up -d --build
       - name: Build with Maven
         working-directory: feedback
-        run: mvn -B package --file pom.xml
+        run: mvn -B -DskipITs package --file pom.xml
