update surefire plugin

--- a/feedback/pom.xml
+++ b/feedback/pom.xml
@@ -203,6 +203,9 @@
                     <version>${maven-surefire-plugin.version}</version>
                     <configuration>
                         <detail>true</detail>
+                        <includes>
+                            <include>%regex[.*]</include>
+                        </includes>
                     </configuration>
                 </plugin>
                 <plugin>
