:truck: move sktip test to dockerfile

--- a/feedback/Dockerfile
+++ b/feedback/Dockerfile
@@ -1,7 +1,7 @@
 FROM maven:3.6.0-jdk-11-slim AS build
 COPY src /home/app/src
 COPY pom.xml /home/app
-RUN mvn -f /home/app/pom.xml clean package
+RUN mvn -DskipTests -f /home/app/pom.xml clean package -P prod
 
 FROM adoptopenjdk/openjdk11-openj9:jdk-11.0.1.13-alpine-slim
 COPY --from=build /home/app/target/feedback.jar feedback.jar
