--- a/feedback/pom.xml
+++ b/feedback/pom.xml
@@ -10,7 +10,7 @@
         <name>Fachgruppe Informatik WHZ</name>
         <url>https://www.fh-zwickau.de/pti/organisation/fachgruppe-informatik/homepage-der-fg-informatik/</url>
     </organization>
-    <inceptionYear>2020</inceptionYear>
+    <inceptionYear>2020-2021</inceptionYear>
 
     <licenses>
         <license>
@@ -293,7 +293,6 @@
                         <properties>
                             <owner>${project.organization.name}</owner>
                             <email>help.flaxel@gmail.com</email>
-                            <license.years>2020</license.years>
                         </properties>
                         <includes>
                             <include>src/*/java/**/*.java</include>
