--- a/stock-quote/pom.xml
+++ b/stock-quote/pom.xml
@@ -10,7 +10,7 @@
         <name>Fachgruppe Informatik WHZ</name>
         <url>https://www.fh-zwickau.de/pti/organisation/fachgruppe-informatik/homepage-der-fg-informatik/</url>
     </organization>
-    <inceptionYear>2020</inceptionYear>
+    <inceptionYear>2020-21</inceptionYear>
 
     <licenses>
         <license>
@@ -86,7 +86,7 @@
                     <properties>
                         <owner>${project.organization.name}</owner>
                         <email>help.flaxel@gmail.com</email>
-                        <license.years>2020</license.years>
+                        <license.years>2020-21</license.years>
                     </properties>
                     <includes>
                         <include>src/*/java/**/*.java</include>
