--- a/commentTone/pom.xml
+++ b/commentTone/pom.xml
@@ -11,7 +11,7 @@
         <name>Fachgruppe Informatik WHZ</name>
         <url>https://www.fh-zwickau.de/pti/organisation/fachgruppe-informatik/homepage-der-fg-informatik/</url>
     </organization>
-    <inceptionYear>2020</inceptionYear>
+    <inceptionYear>2020-2021</inceptionYear>
 
     <licenses>
         <license>
@@ -25,17 +25,17 @@
         <jdk.version>11</jdk.version>
         <maven.compiler.target>${jdk.version}</maven.compiler.target>
         <maven.compiler.source>${jdk.version}</maven.compiler.source>
+
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <spotless.version>2.5.0</spotless.version>
+        <license.version>4.0.rc2</license.version>
         <maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
+
         <rabbitmq.version>5.10.0</rabbitmq.version>
         <gson.version>2.8.2</gson.version>
 
-        <junit.version>5.6.0</junit.version>
-        <mockito.version>3.5.15</mockito.version>
-        <restassured.version>4.3.1</restassured.version>
         <sl4j.version>1.7.30</sl4j.version>
     </properties>
 
@@ -105,12 +105,12 @@
                 <plugin>
                     <groupId>com.mycila</groupId>
                     <artifactId>license-maven-plugin</artifactId>
+                    <version>${license.version}</version>
                     <configuration>
                         <header>com/mycila/maven/plugin/license/templates/MPL-2.txt</header>
                         <properties>
                             <owner>${project.organization.name}</owner>
                             <email>help.kb1prb13@gmail.com</email>
-                            <license.years>2020</license.years>
                         </properties>
                         <includes>
                             <include>src/*/java/**/*.java</include>
