--- a/stock-quote/pom.xml
+++ b/stock-quote/pom.xml
@@ -32,6 +32,7 @@
         <yahoo-finance-api.version>3.15.0</yahoo-finance-api.version>
         <rabbitmq.version>5.10.0</rabbitmq.version>
         <json.version>20201115</json.version>
+        <logger.version>1.7.28</logger.version>
 
     </properties>
     <dependencies>
@@ -49,6 +50,11 @@
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>${json.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>${logger.version}</version>
         </dependency>
     </dependencies>
 
