--- a/docker-compose.stocktrader.yml
+++ b/docker-compose.stocktrader.yml
@@ -3,7 +3,7 @@ version: '3.1'
 services:
   stock-quote-publisher:
     build: ./stock-quote/
-    restart: on-failure
+    restart: always
     environment:
       RABBITMQ_SERVICE: "rabbitmq"
       RABBITMQ_EXCHANGE: "stocks"
@@ -13,7 +13,7 @@ services:
 #      STOCK_SYMBOLS: "TSLA,INTC,GOOG,MSFT,AMZN,NVDA,NFLX,SBUX,SAP,ADDYY,POAHF,SAP.DE"
   feedback:
     build: ./feedback/
-    restart: on-failure
+    restart: always
     depends_on:
       - postgres
       - rabbitmq
